integration_tests/codegen_fail/fail/object/attr_no_fields.stderr
error: GraphQL object must have at least one field

  = note: https://spec.graphql.org/June2018/#sec-Objects

 --> fail/object/attr_no_fields.rs:6:6
  |
6 | impl Obj {}
  |      ^^^
